--- a/MHI/Makefile-Includes
+++ b/MHI/Makefile-Includes
@@ -19,7 +19,7 @@ PATH    = include
 MHI_INCLUDES    = MHIDevelop:Include
 
 all: $(LIBRARYNAME)
-	copy $(MHI_INCLUDES)/libraries $(PATH)/libraries   ALL CLONE
+	copy $(MHI_INCLUDES)/libraries $(PATH)/ASM/libraries   ALL CLONE
 
 clean:
 	-@delete $(PATH) ALL
