--- a/CAMD/driver/Makefile
+++ b/CAMD/driver/Makefile
@@ -27,7 +27,7 @@ ifeq ($(findstring /home,$(HOME)), /home)
   RM            = rm -rf
   RM_SUFFIX     =
   CP            = cp
-  RUNNER        = vamos -c ../.vamosrc
+  RUNNER        = vamos -c ../../.vamosrc
   IGNORE_VAMOS  = -
   LHA           = jlha
 
