--- a/CAMD/Makefile-Includes
+++ b/CAMD/Makefile-Includes
@@ -31,66 +31,77 @@ CAMD_INCLUDES    = ADCD_2.1:Extras/MIDI/camd-37.1/development
 CAMD_ORIG_CLIB   = $(CAMD_INCLUDES)/include/clib/$(BASE)_protos.h
 CAMD_ORIG_FD     = $(CAMD_INCLUDES)/fd/$(BASE)_lib.fd
 
+CAMD_PATCH_FD    = RAM:$(BASE)_lib.fd
+
 default: all
+
+$(CAMD_PATCH_FD): $(CAMD_ORIG_FD)
+	edit FROM $< TO $@ WITH fd_patch
+
+SFDPATH = $(PATH)/sfd/
+SFDNAME = $(SFDPATH)$(BASE).sfd
+$(SFDNAME): $(CAMD_PATCH_FD)
+	-@makedir $(SFDPATH) ALL >NIL:
+	fd2pragma SPECIAL 112 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(SFDPATH)
 
 PRAGMAPATH = $(PATH)/C/pragma/
 PRAGMANAME = $(PRAGMAPATH)$(BASE)_lib.h
-$(PRAGMANAME): $(CAMD_ORIG_FD)
+$(PRAGMANAME): $(CAMD_PATCH_FD)
 	-@makedir $(PRAGMAPATH) ALL >NIL:
-	fd2pragma SPECIAL   6 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(PRAGMAPATH)
+	fd2pragma SPECIAL   6 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(PRAGMAPATH)
 
 AMIGAEPATH = $(PATH)/AmigaE/
 AMIGAENAME = $(AMIGAEPATH)$(BASE).m
-$(AMIGAENAME): $(CAMD_ORIG_FD)
+$(AMIGAENAME): $(CAMD_PATCH_FD)
 	-@makedir $(AMIGAEPATH) ALL >NIL:
-	fd2pragma SPECIAL  18 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(AMIGAEPATH)
+	fd2pragma SPECIAL  18 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(AMIGAEPATH)
 
 GCCINLINEPATH = $(PATH)/C/inline/
 GCCINLINENAME = $(GCCINLINEPATH)$(BASE).h
-$(GCCINLINENAME): $(CAMD_ORIG_FD)
+$(GCCINLINENAME): $(CAMD_PATCH_FD)
 	-@makedir $(GCCINLINEPATH) ALL >NIL:
-	fd2pragma SPECIAL  40 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(GCCINLINEPATH)
+	fd2pragma SPECIAL  40 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(GCCINLINEPATH)
 
 PROTOPATH = $(PATH)/C/proto/
 PROTONAME = $(PROTOPATH)$(BASE).h
-$(PROTONAME): $(CAMD_ORIG_FD)
+$(PROTONAME): $(CAMD_PATCH_FD)
 	-@makedir $(PROTOPATH) ALL >NIL:
-	fd2pragma SPECIAL  38 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(PROTOPATH)
+	fd2pragma SPECIAL  38 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(PROTOPATH)
 
 VBCCINLINEPATH = $(PATH)/C/inline/
 VBCCINLINENAME = $(VBCCINLINEPATH)$(BASE)_protos.h
-$(VBCCINLINENAME): $(CAMD_ORIG_FD)
+$(VBCCINLINENAME): $(CAMD_PATCH_FD)
 	-@makedir $(VBCCINLINEPATH) ALL >NIL:
-	fd2pragma SPECIAL  70 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(VBCCINLINEPATH)
+	fd2pragma SPECIAL  70 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(VBCCINLINEPATH)
 
 LVOPATH = $(PATH)/ASM/lvo/
 LVONAME = $(LVOPATH)$(BASE)_lib.i
-$(LVONAME): $(CAMD_ORIG_FD)
+$(LVONAME): $(CAMD_PATCH_FD)
 	-@makedir $(LVOPATH) ALL >NIL:
-	fd2pragma SPECIAL  23 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(LVOPATH)
+	fd2pragma SPECIAL  23 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(LVOPATH)
 
 FDPATH = $(PATH)/FD/
 FDNAME = $(FDPATH)$(BASE)_lib.fd
-$(FDNAME): $(CAMD_ORIG_FD)
+$(FDNAME): $(CAMD_PATCH_FD)
 	-@makedir $(FDPATH) ALL >NIL:
-	fd2pragma SPECIAL 110 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(FDPATH) COMMENT
+	fd2pragma SPECIAL 110 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(FDPATH) COMMENT
 
 CLIBPATH = $(PATH)/C/clib/
 CLIBNAME = $(CLIBPATH)$(BASE)_protos.h
-$(CLIBNAME): $(CAMD_ORIG_FD)
+$(CLIBNAME): $(CAMD_PATCH_FD)
 	-@makedir $(CLIBPATH) ALL >NIL:
-	fd2pragma SPECIAL 111 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_ORIG_FD) TO $(CLIBPATH) COMMENT
+	fd2pragma SPECIAL 111 CLIB $(CAMD_ORIG_CLIB) INFILE $(CAMD_PATCH_FD) TO $(CLIBPATH) COMMENT
 # breaks it sometimes... COPYRIGHT $(AUTHOR)
 
 all: $(PRAGMANAME) $(AMIGAENAME) $(GCCINLINENAME) $(PROTONAME) \
      $(VBCCINLINENAME) $(LVONAME) $(FDNAME) $(CLIBNAME) \
-     $(LIBRARYNAME)
+     $(LIBRARYNAME) $(SFDNAME)
 	-@makedir $(PATH)/midi ALL >NIL:
 	copy $(CAMD_INCLUDES)/include/midi/#?.h $(PATH)/midi/ ALL CLONE
 	copy $(CAMD_INCLUDES)/include/midi/#?.i $(PATH)/midi/ ALL CLONE
 
 clean:
 	-@delete $(PATH) ALL
-
+	-@delete $(CAMD_PATCH_FD) ALL
 # cp -R ~/Dokumente/FS-UAE/Shared/CAMD/include .
 # for UAEM in `find include | grep \.uaem` ; do rm $UAEM ; done
